# AvantizeGuide

./: README.md
1-communication/: README.md
1-communication/1-thunderbird/: README.md
1-communication/2-mattermost/: README.md
2-redmine/: README.md
3-git/: README.md
4-programming-style/cmake/: CMakeLists.txt  README.md
4-programming-style/cpp/: README.md
coding-style/cmake/: README.md
coding-style/cmake/src/: CMakeLists.txt
coding-style/cpp/: README.md  User.cpp  User.h
coding-style/cpp/src/: File.cpp  File.h  User.h
communication/: README.md
communication/mattermost/: README.md
communication/thunderbird/: README.md
git/: README.md
installation/cpp/: README.md
programming-style/cmake/: CMakeLists.txt  README.md
programming-style/cpp/: User.cpp
redmine/: README.md
